# cgraph2dot

./: CMakeLists.txt  README.md  VISUALIZATION.md  cgraph2dot  dot2interactive.py
.github/workflows/: gcc-compatibility-test.yml
cmake/: CGraphVisualizer.cmake  FindCGraphs.cmake
example/: CMakeLists.txt  util.h
examples/: CMakeLists.txt
examples/c_example/: CMakeLists.txt  cgraph2dot_example.dot  main.c  util.c
examples/fortran_example/: CMakeLists.txt  filters.json  main.f90  my_module.f90
tests/: dotdiff.py  test_gcc_compatibility.py
tests/reference/gcc-11/: cgraph2dot_c_example.dot  cgraph2dot_fortran_example.dot
tests/reference/gcc-8/: cgraph2dot_c_example.dot  cgraph2dot_fortran_example.dot
